# how-to-finetune-llama-3-and-use-in-ollama

./: .gitattributes  .gitignore  README.md  fix.bat  main.py  pyproject.toml
fix/: save.py
